Closed Bug 1154296 Opened 9 years ago Closed 9 years ago

Small GetOwnPropertyDescriptor cleanup

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox40 --- fixed

People

(Reporter: evilpie, Assigned: evilpie)

Details

Attachments

(2 files)

It seems better to call NativeGetExistingProperty directly, so we don't accidentally do something unexpected by calling GetProperty.
Attachment #8592244 - Flags: review?(jorendorff)
Assignee: nobody → evilpies
OS: Linux → All
Hardware: x86_64 → All
Attachment #8592244 - Flags: review?(jorendorff) → review+
Attached image bug1154296.png
btw: there's a screenshot available ...

I noticed cause I'm tracking a perma-orange I have with an unrelated new test I wrote and I'm seeing this with other crashes :
https://hg.mozilla.org/mozilla-central/rev/1f443ee3a7e9
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: