Bug 1154296 - Small GetOwnPropertyDescriptor cleanup. r=jorendorff